Fixed the truncation and text centering in the archive list view.

--- a/memmee-client/src/main/resources/css/memmee.css
+++ b/memmee-client/src/main/resources/css/memmee.css
@@ -977,6 +977,7 @@ html.homepage{
     height: 81px;
     color: #404445;
     background-position: 0 0;
+    text-align: center;
 }
 
 .slidecard.art{
